# pasukan-bodrek

./: .gitignore  AGENTS.md  KNOWLEDGE.md  README.md  agents.md  coret.txt  flake.nix  how-to.md  launch.sh  progress.md  project.md  stop.sh
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 13a7f0381ddd_create_projects_table.py  13e90eaeb71e_create_commodities_table.py  487f0b65e92b_foundation.py  56243f54b687_create_cargo_flows_table.py  682e54a41ac9_create_scenarios_table.py  6e652feee51c_create_cargo_conversion_rules_table.py  7cee4358dc3e_create_tenants_table.py  7d62aabad889_create_project_parameters_and_scenario_.py  8f73b624a91c_create_study_ports_table.py  9a82f345678b_create_external_ports_table.py  b0123456789a_create_bathymetry_tables.py  c0123456789b_create_routes_table.py  d0123456789c_add_route_id_to_cargo_flows.py  e54c2399c29d_add_projection_fields_to_cargo_flows.py  f0123456789e_create_vessels_table.py  g0123456789f_expand_vessels_table_fields.py  h0123456789g_create_commodity_vessel_compatibilities_table.py  (+2 more)
backend/scripts/: reset_workspace.py
backend/src/: config.py  main.py
backend/tests/: test_bathymetry.py  test_candidate_generation.py  test_cargo_flow.py  test_commodity.py  test_commodity_vessel_compatibility.py  test_conversion_rule.py  test_demand_projection.py  test_external_port.py  test_project.py  test_route.py  test_route_compatibility.py  test_scenario.py  test_scenario_parameter.py  test_scenario_vessel_candidate.py  test_study_port.py  test_tenant.py  test_vessel.py
(+165 files in other folders)
