[project]
name = "maritime-transport-planner-backend"
version = "0.1.0"
description = "Backend for Maritime Transportation and Port Planning Application"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
